// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-ai - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Use for Azure AI: Search, Speech, Document Intelligence. Helps with search, vector/hybrid search, speech-to-text, text-to-speech, transcription, OCR.
USE FOR: AI Search, query search, vector search, hybrid search, semantic search, speech-to-text, text-to-speech, transcribe, OCR, convert text to speech.
DO NOT USE FOR: Function apps/Functions (use azure-functions), databases (azure-postgres/azure-kusto), resources, deploy model (use microsoft-foundry), model deployment (use microsoft-foundry), Foundry project (use microsoft-foundry), AI Foundry (use microsoft-foundry), quota management (use microsoft-foundry), create agent (use microsoft-foundry), RBAC for Foundry (use microsoft-foundry), GPT deployment (use microsoft-foundry).
",
  "extractedKeywords": [
    "agent",
    "apps",
    "azure",
    "azure-functions",
    "azure-kusto",
    "azure-postgres",
    "cli",
    "convert",
    "create",
    "databases",
    "deploy",
    "deployment",
    "document",
    "foundry",
    "function",
    "functions",
    "helps",
    "hybrid",
    "intelligence",
    "management",
    "mcp",
    "microsoft-foundry",
    "model",
    "project",
    "query",
    "quota",
    "rbac",
    "resources",
    "search",
    "semantic",
    "speech",
    "speech-to-text",
    "text",
    "text-to-speech",
    "transcribe",
    "transcription",
    "vector",
    "with",
  ],
  "name": "azure-ai",
}
`;

exports[`azure-ai - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "apps",
  "azure",
  "azure-functions",
  "azure-kusto",
  "azure-postgres",
  "cli",
  "convert",
  "create",
  "databases",
  "deploy",
  "deployment",
  "document",
  "foundry",
  "function",
  "functions",
  "helps",
  "hybrid",
  "intelligence",
  "management",
  "mcp",
  "microsoft-foundry",
  "model",
  "project",
  "query",
  "quota",
  "rbac",
  "resources",
  "search",
  "semantic",
  "speech",
  "speech-to-text",
  "text",
  "text-to-speech",
  "transcribe",
  "transcription",
  "vector",
  "with",
]
`;
